[build] get latest error-prone running again